RESOLVED FIXED166467
RenderBlockFlow::moveFloatsTo does not move floats.
https://bugs.webkit.org/show_bug.cgi?id=166467
Summary RenderBlockFlow::moveFloatsTo does not move floats.
alan
Reported 2016-12-23 11:32:15 PST
since it's not supposed to. What it does is when a flow box with floats gets reparented it copies the floats to this new parent so that overhanging floats are still accessible from the outermost flow. (if we move a flow with overhanging floats to a new anon box and this overhanging floats are also part of the parent context, we need to make sure that this new anon parent has the floats too.)
Attachments
Patch (8.87 KB, patch)
2016-12-23 16:22 PST, alan
no flags
alan
Comment 1 2016-12-23 16:22:11 PST
WebKit Commit Bot
Comment 2 2016-12-24 10:00:45 PST
Comment on attachment 297725 [details] Patch Clearing flags on attachment: 297725 Committed r210145: <http://trac.webkit.org/changeset/210145>
WebKit Commit Bot
Comment 3 2016-12-24 10:00:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.