Source/WebCore/rendering/RenderRubyBase.cpp
@@ -71,10 +71,10 @@ void RenderRubyBase::moveChildren(RenderRubyBase* toBase, RenderObject* beforeCh
     toBase->setNeedsLayoutAndPrefWidthsRecalc();
 }
 
-void RenderRubyBase::mergeChildrenWithBase(RenderRubyBase* toBlock)
+void RenderRubyBase::mergeChildrenWithBase(RenderRubyBase& toBlock)
 {
-    moveChildren(toBlock);
-    moveFloatsTo(toBlock);
+    moveChildren(&toBlock);
+    addFloatsToNewParent(toBlock);
 }
 
 void RenderRubyBase::moveInlineChildren(RenderRubyBase* toBase, RenderObject* beforeChild)
